--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
         }
       }
       </script>
-      
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-W9SYXMH4VD"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-W9SYXMH4VD');
+      </script>
+
   </body>
 </html>
