--- a/index.html
+++ b/index.html
@@ -46,16 +46,15 @@
     </script>
       
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W9SYXMH4VD"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-      <script async src="https://www.googletagmanager.com/gtag/js?id=G-W9SYXMH4VD"></script>
-
-      <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'G-W9SYXMH4VD');
-      </script>
+      gtag('config', 'G-W9SYXMH4VD');
+    </script>
 
   </body>
 </html>
