--- a/index.html
+++ b/index.html
@@ -13,16 +13,10 @@
     <meta name="author" content="João Amaral" />
     <meta name="robots" content="index, follow" />
 
-    <meta property="og:title" content="João Amaral | Web Developer & Engineer" />
+    <meta property="og:title" content="João Amaral | Software Engineer" />
     <meta property="og:description" content="Discover João Amaral's skills and projects in web development, specializing in React, TypeScript, and UI/UX." />
-    <meta property="og:image" content="https://www.yourwebsite.com/preview-image.jpg" />
+    <meta property="og:image" content="https://www.joaomramaral.com/photo.jpg" />
     <meta property="og:url" content="https://www.joaomramaral.com/" />
-    
-    <meta name="twitter:title" content="João Amaral | Web Developer & Engineer">
-    <meta name="twitter:description" content="Explore João Amaral's portfolio, featuring cutting-edge web development projects with React and TypeScript.">
-    <meta name="twitter:image" content="https://www.yourwebsite.com/preview-image.jpg">
-    <meta name="twitter:card" content="summary_large_image">
-    
 
   </head>
   <body>
@@ -36,11 +30,11 @@
         "@context": "https://schema.org",
         "@type": "Person",
         "name": "João Amaral",
-        "jobTitle": "Web Developer & Engineer",
+        "jobTitle": "Software Engineer",
         "url": "https://www.joaomramaral.com/",
         "sameAs": [
-          "https://github.com/YOUR_USERNAME",
-          "https://linkedin.com/in/YOUR_PROFILE"
+          "https://github.com/jamaral42",
+          "https://www.linkedin.com/in/jo%C3%A3o-amaral-92614030b/"
         ]
       }
     </script>
