--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
       
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W9SYXMH4VD"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1NBCW8QMZ4"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-W9SYXMH4VD');
+      gtag('config', 'G-1NBCW8QMZ4');
     </script>
 
   </body>
